# yash

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  lgtm.yml  yash.yml
.github/workflows/: build.yml  codeql-analysis.yml
example/: example.cpp
include/: Yash.h
src/: CMakeLists.txt  main.cpp
src/example/: example.cpp
test/: CMakeLists.txt  TestYash.cpp
